--- a/history.html
+++ b/history.html
@@ -7,12 +7,12 @@
 		<link href="https://fonts.googleapis.com/css?family=Days+One|Francois+One|Open+Sans+Condensed:300|Oswald|Raleway|Squada+One" rel="stylesheet" type="text/css"> 
 	</head>		
 	<body>
-		<a href= "index.html" class="button">HOMEPAGE</a>
-		<a href= "hockeyplayer.html" class="button">Miles Gilbert "Tim" Horton</a>
-		<a href= "history.html" class="button">How it came to be</a>
-		<a href= "foundation.html" class="button">Making A Difference</a>
-		<a href= "references.html" class="button">References</a>
-		<h1 id= "historypage"> A Brief History of Tim Horton's </h1> 
+		<a href="index.html"class="button">HOMEPAGE</a>
+		<a href="hockeyplayer.html"class="button">Miles Gilbert "Tim" Horton</a>
+		<a href="history.html"class="button">How it came to be</a>
+		<a href="foundation.html"class="button">Making A Difference</a>
+		<a href="references.html"class="button">References</a>
+		<h1 id="historypage"> A Brief History of Tim Horton's </h1> 
 		<h2> To this day, the Tim Hortons franchise has 4,304 restaurants, including 3,468 in Canada and 807 in the United States. Tim Hortons success will continue to rise and
 		more restaurants will continue to open. Here is a brief history of where the franchise started at: </h2>
 		<img id= "historypicture" src= "images/section-wwb-banner-full.jpg" alt="Tim hortons coffee">
@@ -22,7 +22,7 @@
 			<li> 1967: The Tim Hortons franchise increases to three stores and former hamilton police and good friend of the hockey player, Ron Joyce, becomes a full-time partner with the franchise </li>
 			<li> 1974: Tim Horton is killed and dies in a major car accident in St. Catharines, Ont. </li>
 			<li> 1975: After Mr. Horton's death, Mr. Joyce becomes the sole owner for the chain which has now opened 40 stores. As well, Mr. Joyce establishes the Tim Horton Children's Foundation in honour of Mr. Horton </li>
-			<li> 1976: Tim Horton's iconic bakery item, the 'Timbits' are introduced </li>
+			<li> 1976: Tim Hortons' iconic bakery item, the 'Timbits' are introduced </li>
 			<li> 1985: The franchise introduces more products other than bakery items including soups and chilis </li>
 			<li> 1987: Tim Hortons successfully opens it's 300th store in Calgary </li>
 			<li> 1991: Continuation of success and Tim Horton's opens it's 500th store in Aylmer, Que. </li>
