--- a/history.html
+++ b/history.html
@@ -4,14 +4,20 @@
 		<title> History of Tim Horton's </title>
 		<meta charset = "UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Days+One|Francois+One|Open+Sans+Condensed:300|Oswald|Raleway|Squada+One" rel="stylesheet" type="text/css"> 
+		<link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Squada+One" rel="stylesheet" type="text/css">
+
 	</head>		
 	<body>
-		<a href="index.html"class="button">HOMEPAGE</a>
-		<a href="hockeyplayer.html"class="button">Miles Gilbert "Tim" Horton</a>
-		<a href="history.html"class="button">How it came to be</a>
-		<a href="foundation.html"class="button">Making A Difference</a>
-		<a href="references.html"class="button">References</a>
+		<a href="index.html" class="button">HOMEPAGE</a>
+		<a href="hockeyplayer.html" class="button">Miles Gilbert "Tim" Horton</a>
+		<a href="history.html" class="button">How it came to be</a>
+		<a href="foundation.html" class="button">Making A Difference</a>
+		<a href="references.html" class="button">References</a>
 		<h1 id="historypage"> A Brief History of Tim Horton's </h1> 
 		<h2> To this day, the Tim Hortons franchise has 4,304 restaurants, including 3,468 in Canada and 807 in the United States. Tim Hortons success will continue to rise and
 		more restaurants will continue to open. Here is a brief history of where the franchise started at: </h2>
