--- a/references.html
+++ b/references.html
@@ -4,7 +4,12 @@
 		<title> References </title>
 		<meta charset = "UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Days+One|Francois+One|Open+Sans+Condensed:300|Oswald|Raleway|Squada+One" rel="stylesheet" type="text/css"> 
+		<link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Squada+One" rel="stylesheet" type="text/css">
 	</head>		
 	<body>
 		<!--Format buttons properly-->
