--- a/references.html
+++ b/references.html
@@ -18,15 +18,15 @@
 		<a href="history.html" class="button">How it came to be</a>
 		<a href="foundation.html" class="button">Making A Difference</a>
 		<a href="references.html" class="button">References</a>
-		<h1 id="information"> Information Sources </h1>
-		<ul id="sources"> 
+		<h1 class="information"> Information Sources </h1>
+		<ul class="sources"> 
 			<li> (2016, October 12). Retrieved March 26, 2017, from http://www.timhortons.com/ca/en/index.php </li>
 			<li> A brief history of Tim Hortons. (2009, March 31). Retrieved March 26, 2017, from http://www.theglobeandmail.com/report-on-business/a-brief-history-of-tim-hortons/article20392885/ </li>
 			<li> Helping make a real difference for children in your community. (2016, June 27). Retrieved March 26, 2017, from http://www.timhortons.com/ca/en/childrens-foundation/index.php/ </li>
 		</ul>
 		<!-- Don't forget to insert the "Back to Top" button somewhere-->
-		<h1 id= "information"> Picture/Video Sources </h1>
-		<ul id= "sources"> 
+		<h1 class= "information"> Picture/Video Sources </h1>
+		<ul class= "sources"> 
 			<li> [Digital image]. (n.d.). Retrieved from http://4.bp.blogspot.com/-0yml0OSmVi0/UQ_VIELqI3I/AAAAAAAAEyU/kLhymEzEX1w/s1600/tim horton.jpg </li>
 			<li> [Digital image]. (n.d.). Retrieved from https://www.timhortons.com/ca/images/AboutTheFoundation_Carousel_01_806x391-v2.png </li>
 			<li> [Digital image]. (n.d.). Retrieved from http://www.timhortons.com/ca/imageslegacy2016/en/section-wwb-banner-full.jpg </li>
