--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 		world-wide, the dream still lives on to this very day. Check out the website to learn more about Tim Hortons! </p>
 		<!--Add the commercial for more information later-->
 		<h3> Click below to check out a Tim Hortons commercial: </h3>
-		<video id="timhortonsad"controls>
+		<video id="timhortonsad" controls>
 		<source src="images/Tim Hortons Coffee Commercial 2016.mp4" type="video/mp4">
+		</video>
 		
 	</body>
 </html>
