--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!--Add the commercial for more information later-->
 		<h3> Click below to check out a Tim Hortons commercial: </h3>
 		<video id="timhortonsad" controls>
-		<source src="images/Tim Hortons Coffee Commercial 2016.mp4" type="video/mp4">
+		<source src="images/TimHortonsCoffeeCommercial2016.mp4" type="video/mp4">
 		</video>
 		
 	</body>
