--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Squada+One" rel="stylesheet" type="text/css">
 	</head>					
-    </body>
+    <body>
 		<a href="index.html" class="button">HOMEPAGE</a>
 		<a href="hockeyplayer.html" class="button">Miles Gilbert "Tim" Horton</a>
 		<a href="history.html" class="button">How it came to be</a>
